[project]
name = "wixdbmemberstogooglesheet"
version = "0.1.1"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = ["pytest (>=9.0.3,<10.0.0)", "ruff (>=0.15.11,<0.16.0)", "pyright (>=1.1.408,<2.0.0)", "mypy (>=1.20.2,<2.0.0)"]

[poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["."]